syntax = "proto3";

option go_package = "./userService";
/*
*/
message UserInfo {
    string name = 1;
    int32 age = 2;
    string email = 3;
    repeated string hobbies = 4;
}